add RoleEnum from common-lib